Fix video posts
* Video embeds were too tall and wide because of the $content_width
* Adds a dropshadow without a psuedo element blocking interaction
* Makes iframes as the featured video 100% width

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -626,6 +626,13 @@ table {
 	td { padding: 5px; }
 }
 
+.post-video {
+	display: inline-block;
+	margin-bottom: 20px;
+	@include box-shadow( inset 0 0 0 1px rgba(white, 0.15), 0 0 10px rgba(black, 0.4) );
+	iframe { width: 100%; display: block; }
+}
+
 .post-thumbnail, .wp-caption a {
 	display: inline-block;
 	margin-bottom: 20px;
@@ -646,7 +653,7 @@ table {
 		margin-bottom: 0;
 	}
 }
-.post-thumbnail {
+.post-thumbnail, .post-video {
 	width: 100%;
 }
 .wp-caption-text {
